now uses own domain name and corrected grid aligning

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
 #packages .thumbnail img {
     width: 100%;
 }
+
+#packages .row .col-md-4:nth-child(3n+1) {
+    clear: both;
+}
